# LearnToday

./: README.md
chain_worker/: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
chain_worker/app/: config.py  pipeline.py  worker.py
chain_worker/app/tasks/: task_a.py  task_b.py  task_c.py
fastapi-clean-20250921/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
fastapi-clean-20250921/src/app/: __init__.py  config.py  main.py
fastapi-clean-20250921/src/app/user/api/v1/routes/: users.py
fastapi-clean-20250921/src/app/user/application/dtos/: user_dto.py
fastapi-clean-20250921/src/app/user/application/services/: user_service.py
fastapi-clean-20250921/src/app/user/domain/entities/: user.py
fastapi-clean-20250921/src/app/user/domain/repositories/: user_repository.py
fastapi-clean-20250921/src/app/user/infrastructure/db/: models.py  session.py
fastapi-clean-20250921/src/app/user/infrastructure/repositories/: user_repository_impl.py
fastapi-clean-20250921/tests/: conftest.py  test_users.py
fastapi-swagger-test/: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.py
fastapi-swagger-test/alembic/: env.py
fastapi-swagger-test/alembic/versions/: first_migration.py
fastapi-swagger-test/src/: dependencies.py  main.py
fastapi-swagger-test/src/api/v1/: api.py
fastapi-swagger-test/src/api/v1/endpoints/: users.py
fastapi-swagger-test/src/db/: session.py
fastapi-swagger-test/src/models/: user.py
fastapi-swagger-test/src/my_fastapi_project/: dependencies.py  main.py
fastapi-swagger-test/src/my_fastapi_project/api/v1/: api.py
fastapi-swagger-test/src/my_fastapi_project/api/v1/endpoints/: users.py
fastapi-swagger-test/src/my_fastapi_project/core/: config.py
fastapi-swagger-test/src/my_fastapi_project/db/: session.py
fastapi-swagger-test/src/my_fastapi_project/models/: user.py
fastapi-swagger-test/src/my_fastapi_project/repositories/: base.py  user.py
fastapi-swagger-test/src/my_fastapi_project/services/: user.py
fastapi-swagger-test/src/repositories/: base.py  user.py
fastapi-swagger-test/src/schemas/: user.py
fastapi-swagger-test/src/services/: user.py
fastapi-swagger-test/tests/: conftest.py
fastapi_uv_docker/: Dockerfile  docker-compose.yml
fastapi_uv_docker/app/: main.py
grpc-rest-video-streaming-test/: .gitignore  README.md  docker-compose.yml  pyproject.toml
grpc-rest-video-streaming-test/client/: Dockerfile  client.py
grpc-rest-video-streaming-test/proto/: video_service.proto
grpc-rest-video-streaming-test/server/: Dockerfile  server.py
match/: README.md  docker-compose.yml  index.html  match.csv  script.js  styles.css
ollama-test/: docker-compose.yml
ollama-test/api/: main.py  requirements.txt
redis-web-lab/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  codex.md  docker-compose.yml  pyproject.toml  redis.conf  webdis.json
redis-web-lab/app/: main.py  models.py  redis_service.py
redis-web-lab/app/application/: __init__.py
redis-web-lab/app/application/services/: __init__.py  push_notification_service.py
redis-web-lab/app/application/use_cases/: __init__.py  push_notification_use_cases.py
redis-web-lab/app/domain/: __init__.py
redis-web-lab/app/domain/entities/: __init__.py  push_notification.py
redis-web-lab/app/domain/repositories/: __init__.py  push_notification_repository.py
redis-web-lab/app/infrastructure/: __init__.py
redis-web-lab/app/infrastructure/database/: __init__.py  redis_connection.py
redis-web-lab/app/infrastructure/repositories/: __init__.py  redis_push_notification_repository.py
redis-web-lab/app/presentation/: __init__.py
redis-web-lab/app/presentation/api/: __init__.py  health_router.py  push_router.py
redis-web-lab/app/presentation/schemas/: __init__.py  push_schemas.py
redis-web-lab/scripts/: check.sh  format.sh
redis-web-lab/tests/: conftest.py  test_api.py  test_redis_service.py
signal_kill_test/: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
todo_list/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
todo_list/app/: crud.py  database.py  main.py  models.py  schemas.py  streamlit_app.py
todo_list/app/routers/: todo.py
tsdb_mqtt_benchmark/: docker-compose.yml  init-influxdb.sh
tsdb_mqtt_benchmark/consumer_tdengine/: Dockerfile  mqtt_tdengine_consumer.py
tsdb_mqtt_benchmark/influx/: telegraf.conf
tsdb_mqtt_benchmark/mosquitto/: mosquitto.conf
tsdb_mqtt_benchmark/publisher/: Dockerfile  mqtt_publisher.py
