[tool.poetry]
name = "signal-kill-test"
version = "0.1.0"
description = "Signal handling test app with graceful shutdown"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"